--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,31 +1,30 @@
-<p>about works!</p>
-
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
-    </tr>
-  </tbody>
+<table class="table table-borderless table-dark">
+<thead>
+  <tr>
+    <th scope="col"></th>
+    <th scope="col">First</th>
+    <th scope="col">Last</th>
+    <th scope="col">Number</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <th scope="row">1</th>
+    <td>Janus Keith</td>
+    <td>Milan</td>
+    <td>09971092863</td>
+  </tr>
+  <tr>
+    <th scope="row">2</th>
+    <td>Alfred Raymond</td>
+    <td>Sanchez</td>
+    <td>09166067793</td>
+  </tr>
+  <tr>
+    <th scope="row">3</th>
+    <td>Jericho Briones</td>
+    <td>Henson</td>
+    <td>09261087782</td>
+  </tr>
+</tbody>
 </table>
