--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,22 @@
-<p>home works!</p>
+<section class="vh-100">
+<div class="container py-5 h-100">
+  <div class="row d-flex justify-content-center align-items-center h-100">
+    <div class="col-md-12 col-xl-5">
 
-<figure class="text-center">
-  <blockquote class="blockquote">
-    <p>A well-known quote, contained in a blockquote element.</p>
-  </blockquote>
-  <figcaption class="blockquote-footer">
-    Someone famous in <cite title="Source Title">Source Title</cite>
-  </figcaption>
-</figure>
+      <figure class="bg-light p-4"
+        style="border-left: .35rem solid #fcdb5e; border-top: 1px solid #eee; border-right: 1px solid #eee; border-bottom: 1px solid #eee;">
+        <i class="fas fa-quote-left fa-2x mb-4" style="color: #fcdb5e;"></i>
+        <blockquote class="blockquote pb-2">
+          <p>
+          “If you can dream it, you can do it.”
+          </p>
+        </blockquote>
+        <figcaption class="blockquote-footer mb-0">
+        Walt Disney in <cite title="Source Title">Source Title</cite>
+        </figcaption>
+      </figure>
+
+    </div>
+  </div>
+</div>
+</section>
