--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -39,18 +39,18 @@
               <li class="list-group-item d-flex align-items-center border-0 mb-2 rounded"
               style="background-color: #f4f6f7;">
               <input class="form-check-input me-2" type="checkbox" value="" aria-label="..." />
-              PROJECT 1
+              Change oil of the car
             </li>
                 
                 <li class="list-group-item d-flex align-items-center border-0 mb-2 rounded"
                   style="background-color: #f4f6f7;">
                   <input class="form-check-input me-2" type="checkbox" value="" aria-label="..." />
-                  PROJECT 2
+                  Pay monthly dues
                 </li>
                 <li class="list-group-item d-flex align-items-center border-0 mb-2 rounded"
                   style="background-color: #f4f6f7;">
                   <input class="form-check-input me-2" type="checkbox" value="" aria-label="..." />
-                  PROJECT 3
+                  Renew Driver's Licsense
                 </li>
                 <li class="list-group-item d-flex align-items-center border-0 mb-0 rounded"
                   style="background-color: #f4f6f7;">
